# game-of-life

./: .gitignore  Dockerfile  LICENSE  Main.hs  Makefile  README.md  default.nix  gameoflife.cabal  shell.nix  stack.yaml
src/: Life.hs  Main.hs  Profile.hs
