
name:                gameoflife
version:             0.3.1.0
synopsis:            Conway's Game of Life
homepage:            https://github.com/AndrewRademacher/game-of-life
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

flag llvm
    description:    Build with the LLVM interface
    default:        True
    manual:         True

executable life
    main-is:            Main.hs
    other-extensions:   OverloadedStrings, DeriveDataTypeable, TypeOperators
    build-depends:      base            >= 4.6     && < 4.8
                      , mwc-random      >= 0.13    && < 0.14
                      , cmdargs         >= 0.10    && < 0.11
                      , text            >= 1.1     && < 1.2
                      , repa            >= 3.2     && < 3.4
                      , gloss           >= 1.8     && < 1.9
                      , text-format     >= 0.3     && < 0.4
                      , mtl             >= 2.1     && < 2.3
                      , vector          >= 0.10    && < 0.11
    hs-source-dirs:     src
    default-language:   Haskell2010

    if flag(llvm)
        ghc-options:        -Wall -O2 -threaded -with-rtsopts=-N -fllvm
    else
        ghc-options:        -Wall -O2 -threaded -with-rtsopts=-N

executable profile
    main-is:            Profile.hs
    hs-source-dirs:     src
    build-depends:      base            >= 4.6     && < 4.8
                    ,   mtl             >= 2.1     && < 2.3
                    ,   repa            >= 3.2     && < 3.4
                    ,   mwc-random      >= 0.13    && < 0.14
                    ,   text-format     >= 0.3     && < 0.4
                    ,   text            >= 1.1     && < 1.2
                    ,   cmdargs         >= 0.10    && < 0.11
                    ,   vector          >= 0.10    && < 0.11
    default-language:   Haskell2010

    if flag(llvm)
        ghc-options:        -Wall -O2 -threaded -rtsopts -fllvm
    else
        ghc-options:        -Wall -O2 -threaded -rtsopts
