
name:                gameoflife
version:             0.4.1.0
synopsis:            Conway's Game of Life
homepage:            https://github.com/AndrewRademacher/game-of-life
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

flag llvm
    description:    Build with the LLVM interface
    default:        False
    manual:         True

executable life
    main-is:            Main.hs
    other-extensions:   OverloadedStrings, DeriveDataTypeable, TypeOperators
    build-depends:      base
                      , mwc-random
                      , cmdargs
                      , repa
                      , gloss
                      , mtl
                      , vector
    hs-source-dirs:     src
    default-language:   Haskell2010

    if flag(llvm)
        ghc-options:        -Wall -O2 -threaded -with-rtsopts=-N -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
    else
        ghc-options:        -Wall -O2 -threaded -with-rtsopts=-N

executable profile
    main-is:            Profile.hs
    hs-source-dirs:     src
    build-depends:      base
                    ,   mtl
                    ,   repa
                    ,   mwc-random
                    ,   cmdargs
                    ,   vector
    default-language:   Haskell2010

    if flag(llvm)
        ghc-options:        -Wall -O2 -threaded -rtsopts -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
    else
        ghc-options:        -Wall -O2 -threaded -rtsopts
